--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <p class="parrafo1">Dios te bendiga y que siempre estes a  su lado, que cumpla siempre los 
         deseos de tu corazon y  tengas un dia lleno de alegria </p>
     <img src="imagenesSara/fondo.jpg" alt="cumple">
-    <img class="años" src="imagenesSara/IMG_20220102_194759.jpg" alt="foto">
+    <img class="años" src="imagenesSara/hoy.jpg" alt="foto">
     <h3 class="tres"> TE AMO SARITA</h3>
 </body>
 </html>
